# skills-sync

./: .gitignore  .yamllint.yml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  INSPIRATIONS.md  LICENSE  Makefile  README.md  project.yml  rename-plan.md
platform/: .gitignore  Cargo.toml  README.md
platform/apps/agent-sync-desktop/src-tauri/: Cargo.toml  tauri.conf.json
platform/apps/agent-sync-desktop/src-tauri/icons/: icon.icns
platform/apps/agent-sync-desktop/src-tauri/src/: app_runtime.rs  app_state.rs  catalog_support.rs  cli_util.rs  command_support.rs  details_support.rs  dotagents_runner.rs  dotagents_runtime.rs  main.rs  open_path.rs  settings.rs  skills_runner.rs  skills_runtime.rs
platform/apps/agent-sync-desktop/src-tauri/src/commands/: catalog.rs  details.rs  dotagents.rs  runtime.rs  sync.rs
platform/apps/agent-sync-desktop/src-tauri/tests/: tauri_build_commands_paths.rs
platform/apps/agent-sync-desktop/ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json
platform/apps/agent-sync-desktop/ui/docs/: native-ui-reference.md
platform/apps/agent-sync-desktop/ui/e2e/: fixtures.ts  smoke.spec.ts
platform/apps/agent-sync-desktop/ui/scripts/: prepare-dotagents-bundle.mjs
platform/apps/agent-sync-desktop/ui/src/: App.test.tsx  App.tsx  index.css  main.tsx  skillUtils.test.ts  skillUtils.ts  tauriApi.test.ts  tauriApi.ts  types.ts
platform/apps/agent-sync-desktop/ui/src/components/: AppHeader.tsx  AuditLogDialog.tsx  DeleteConfirmDialog.tsx  SyncWarningsBanner.tsx
platform/apps/agent-sync-desktop/ui/src/components/app/: CatalogPane.tsx  DetailsPane.tsx  buildDetailsPaneProps.ts
platform/apps/agent-sync-desktop/ui/src/components/catalog/: AgentLogoIcon.tsx  CatalogPanels.test.tsx  CatalogSelectableRow.test.tsx  CatalogSelectableRow.tsx  McpAgentStatusStrip.test.tsx  McpAgentStatusStrip.tsx  (+4 more)
platform/apps/agent-sync-desktop/ui/src/hooks/: useAppMenuState.ts  useAutoRefresh.test.ts  useAutoRefresh.ts  useCatalogActions.ts  useDotagentsVerification.ts  useEntityDetails.ts  useFavorites.test.ts  useFavorites.ts  useSkillDetails.ts  useSubagentDetails.ts  useSyncState.test.ts  useSyncState.ts  useSyncWarnings.ts
platform/apps/agent-sync-desktop/ui/src/lib/: catalogUtils.test.ts  catalogUtils.ts  formatting.ts  mcpAgents.test.ts  mcpAgents.ts  platform.test.ts  platform.ts  uiSettings.ts  uiStateTypes.ts  utils.ts
platform/apps/skillssync-desktop/src-tauri/: Cargo.toml  tauri.conf.json
platform/apps/skillssync-desktop/src-tauri/icons/: icon.icns
platform/apps/skillssync-desktop/src-tauri/src/: main.rs
platform/apps/skillssync-desktop/src-tauri/tests/: tauri_build_commands_paths.rs
platform/apps/skillssync-desktop/ui/: index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
platform/apps/skillssync-desktop/ui/scripts/: prepare-dotagents-bundle.mjs
platform/apps/skillssync-desktop/ui/src/: App.test.tsx  App.tsx  index.css  skillUtils.test.ts  skillUtils.ts  tauriApi.test.ts  tauriApi.ts  types.ts
platform/apps/skillssync-desktop/ui/src/lib/: mcpAgents.test.ts
platform/crates/agent-sync-cli/: Cargo.toml
platform/crates/agent-sync-cli/src/: main.rs
platform/crates/agent-sync-core/: Cargo.toml
platform/crates/agent-sync-core/src/: agents_context.rs  audit_store.rs  codex_registry.rs  codex_subagent_registry.rs  config_validation.rs  dotagents_adapter.rs  dotagents_runtime.rs  engine.rs  error.rs  lib.rs  mcp_registry.rs  models.rs  paths.rs  settings.rs  state_store.rs  toml_scan.rs
platform/crates/agent-sync-core/tests/: architecture_tests.rs  engine_tests.rs
platform/crates/agent-sync-core/tests/support/: mod.rs
platform/crates/skillssync-cli/: Cargo.toml
platform/crates/skillssync-cli/src/: main.rs
platform/crates/skillssync-core/: Cargo.toml
platform/crates/skillssync-core/src/: audit_store.rs  codex_registry.rs  dotagents_adapter.rs  dotagents_runtime.rs  engine.rs  error.rs  lib.rs  mcp_registry.rs  models.rs  paths.rs  settings.rs  state_store.rs  watch.rs
platform/crates/skillssync-core/tests/: engine_tests.rs
platform/spec/: capability-matrix.json  cli-contract.json  state.schema.json
platform/spec/fixtures/: empty_state.json  sample_state.json
(+93 files in other folders)
