[workspace]
members = [
  "crates/agent-sync-core",
  "crates/agent-sync-cli",
  "apps/agent-sync-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.4"
authors = ["Agent Sync Team"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
walkdir = "2.5"
tempfile = "3.26"
toml = "1.0"
tracing = "0.1"
