[package]
name = "agent-sync-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
agent-sync-core = { path = "../../../crates/agent-sync-core" }
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
